init-layout added

--- a/BTW.Web/BTW.Web/Components/Layout/MainLayout.razor.css
+++ b/BTW.Web/BTW.Web/Components/Layout/MainLayout.razor.css
@@ -76,6 +76,8 @@ main {
     }
 }
 
+/* Blazor */
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
@@ -88,9 +90,9 @@ main {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
