--- a/BTW.Web/BTW.Web/Components/App.razor
+++ b/BTW.Web/BTW.Web/Components/App.razor
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BTW.Web.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
