--- a/BTW.Web/BTW.Web/Components/Pages/Home.razor
+++ b/BTW.Web/BTW.Web/Components/Pages/Home.razor
@@ -2,6 +2,46 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<div id="featured" class="no-top-bottom-padding">
+    <img src="/img/products/mac-book-pro.jpg" class="featured-bg-img" alt="" style="width:100%;">
+    <div class="featured-text-wrap">
+        <span class="featured-lead-text">New Arrivals</span>
+        <h2> Checkout the New Apple MacBook Pro</h2>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
+        <NavLink class="btn-primary" href="#">
+            Discover More
+        </NavLink>
+    </div>
+</div>
 
-Welcome to your new app.
+<div id="selection" class="margin-top-small">
+    <div class="selection-sample-wrap">
+        <div class="selection-col">
+            <div class="sample-item-wrap">
+                <img src="/img/products/headphone-bg.jpg" alt="Norway" style="width:100%;">
+                <div class="sample-item-wrap-details">
+                    <h3>Headphone</h3>
+                    <h4>Best Headphones for Every Day</h4>
+                </div>
+            </div>
+        </div>
+        <div class="selection-col">
+            <div class="sample-item-wrap">
+                <img src="/img/products/smartphone-bg.jpg" alt="Norway" style="width:100%;">
+                <div class="sample-item-wrap-details">
+                    <h3>Headphone</h3>
+                    <h4>Best Headphones for Every Day</h4>
+                </div>
+            </div>
+        </div>
+        <div class="selection-col">
+            <div class="sample-item-wrap">
+                <img src="/img/products/smartwatch-bg.jpg" alt="Norway" style="width:100%;">
+                <div class="sample-item-wrap-details">
+                    <h3>Headphone</h3>
+                    <h4>Best Headphones for Every Day</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
