responsive mobile menu added

--- a/BTW.Web/BTW.Web/Components/Layout/Navbar.razor
+++ b/BTW.Web/BTW.Web/Components/Layout/Navbar.razor
@@ -3,7 +3,7 @@
 
 }
 
-<div class="navabr">
+<div class="navabr" id="navbar-desktop">
     <div class="wrapper">
         <div class="main-nav">
             <NavLink class="nav-item" href="/" Match="NavLinkMatch.All">
