--- a/BTW.Web/BTW.Web/Components/Layout/MainLayout.razor
+++ b/BTW.Web/BTW.Web/Components/Layout/MainLayout.razor
@@ -1,9 +1,11 @@
 ﻿@inherits LayoutComponentBase
+@using BTW.Web.Client.Pages.Components
 
 <div class="app">
 
     <div id="main-content">
         <Navbar />
+        <NavbarMobile />
         @Body
     </div>
     <Footer />
