--- a/BTW.Web/BTW.Web/Components/Pages/Home.razor
+++ b/BTW.Web/BTW.Web/Components/Pages/Home.razor
@@ -3,45 +3,119 @@
 <PageTitle>Home</PageTitle>
 
 <div id="featured" class="no-top-bottom-padding">
-    <img src="/img/products/mac-book-pro.jpg" class="featured-bg-img" alt="" style="width:100%;">
-    <div class="featured-text-wrap">
-        <span class="featured-lead-text">New Arrivals</span>
-        <h2> Checkout the New Apple MacBook Pro</h2>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
-        <NavLink class="btn-primary" href="#">
-            Discover More
-        </NavLink>
+    <div class="featured-left">
+        <img src="/img/products/dji-min-4k.jpg" class="featured-bg-img" alt="">
+    </div>
+    <div class="featured-right">
+        <div class="featured-details">
+            <p class="new-in">New Arrival</p>
+            <NavLink class="" href="categories">
+                Drones
+            </NavLink>
+            <h3>DJI Mini 4K</h3>
+            <span class="item-details">
+                DJI Mini 4K, drone with 4K UHD Camera.  3-axis gimbal stabilization, 10km 
+                video transmission, auto return, wind resistance, 31-Min Max Flight Time, 
+                Intelligent Flight.
+            </span>
+            <div class="featured-actions-wrap">
+                <NavLink class="btn-primary" href="#">
+                    Discover More
+                </NavLink>
+            </div>
+
+        </div>
+    </div>
+    
+</div>
+
+<div id="product-range" class="margin-top-xtra-large">
+    <div class="range-col">
+        <div class="range-meta">Categories</div>
+        <h2 class="range-tagline">        Explore Our Product Range    </h2>
+        <div class="range-col-items">
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/audio-and-music.jpg" />
+                </NavLink>
+                <h3>Audio and Music </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/drones.jpg" />
+                </NavLink>
+                <h3>Drones </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/computers.jpg" />
+                </NavLink>
+                <h3>Computers </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/wearables.jpg" />
+                </NavLink>
+                <h3>Wearbales </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/consoles-and-vr.jpg" />
+                </NavLink>
+                <h3>Gaming & VR </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/phones-and-tablets.jpg" />
+                </NavLink>
+                <h3>Phones and Tablets </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/home-entertainment.jpg" />
+                </NavLink>
+                <h3>Home Entertainment </h3>
+            </div>
+            <div class="range-col-cell">
+                <NavLink class="range-col-cell-lnk" href="categories">
+                    <img src="/img/categories/cameras.jpg" />
+                </NavLink>
+                <h3>Cameras </h3>
+            </div>
+        </div>
+
     </div>
 </div>
 
 <div id="selection" class="margin-top-small">
-    <div class="selection-sample-wrap">
-        <div class="selection-col">
-            <div class="sample-item-wrap">
-                <img src="/img/products/headphone-bg.jpg" alt="Norway" style="width:100%;">
-                <div class="sample-item-wrap-details">
-                    <h3>Headphone</h3>
-                    <h4>Best Headphones for Every Day</h4>
+    <div class="selection-col">
+        <div class="sample-item-wrap">
+            <img src="/img/products/headphone-bg.jpg" alt="">
+            <div class="sample-item-wrap-details">
+                <h3>Headphones</h3>
+                <div class="meta">Best Headphones for Every Day</div>
+                <div class="link-wrap">
+                    <NavLink class="" href="categories">
+                        View Collection
+                    </NavLink>
                 </div>
             </div>
         </div>
-        <div class="selection-col">
-            <div class="sample-item-wrap">
-                <img src="/img/products/smartphone-bg.jpg" alt="Norway" style="width:100%;">
-                <div class="sample-item-wrap-details">
-                    <h3>Headphone</h3>
-                    <h4>Best Headphones for Every Day</h4>
-                </div>
-            </div>
-        </div>
-        <div class="selection-col">
-            <div class="sample-item-wrap">
-                <img src="/img/products/smartwatch-bg.jpg" alt="Norway" style="width:100%;">
-                <div class="sample-item-wrap-details">
-                    <h3>Headphone</h3>
-                    <h4>Best Headphones for Every Day</h4>
+    </div>
+    <div class="selection-col">
+        <div class="sample-item-wrap">
+            <img src="/img/products/smartwatch-bg.jpg" alt="">
+            <div class="sample-item-wrap-details">
+                <h3>Smartwatches</h3>
+                <div class="meta">The Ultimate Accessory</div>
+                <div class="link-wrap">
+                    <NavLink class="" href="categories">
+                        View Collection
+                    </NavLink>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
