--- a/BTW.Web/BTW.Web/wwwroot/app.css
+++ b/BTW.Web/BTW.Web/wwwroot/app.css
@@ -134,6 +134,7 @@ a {
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 var(--mb-0-5) 0;
     padding: 0;
+    line-height: 1.3;
 }
 
 h1 {
@@ -193,6 +194,22 @@ h6 {
     margin-top: var(--mb-4);
 }
 
+.padding-top-small {
+    padding-top: var(--mb-0-5);
+}
+
+.padding-top-xtra-large {
+    padding-top: var(--mb-4);
+}
+
+.padding-bottom-xtra-large {
+    padding-bottom: var(--mb-4);
+}
+
+.padding-top-xtra-large{
+    padding-top: var(--mb-4);
+}
+
 .container {
     padding-left: 12px;
     padding-right: 12px;
@@ -214,6 +231,10 @@ h6 {
     flex-direction: column;
 }
 
+.text-block {
+    line-height: 1.2;
+    margin-top: var(--mb-0-5);
+}
 
 /*========== 
     Buttons
