Core libary (models) / Datastore (EFCore) added

--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/Email.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/Email.razor
@@ -3,9 +3,9 @@
 @using System.ComponentModel.DataAnnotations
 @using System.Text
 @using System.Text.Encodings.Web
+@using BTW.Datastore.EFCore.Core
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BTW.Web.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
