--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/ResetAuthenticator"
 
 @using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
