--- a/BTW.Web/BTW.Web/Components/Account/Shared/ManageNavMenu.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject SignInManager<ApplicationUser> SignInManager
 
