--- a/BTW.Web/BTW.Web/Components/Account/Pages/ExternalLogin.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
