--- a/BTW.Web/BTW.Web/Components/Account/Pages/ForgotPassword.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/ForgotPassword.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
