--- a/BTW.Web/BTW.Web/Components/Account/Pages/LoginWithRecoveryCode.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/LoginWithRecoveryCode.razor
@@ -2,7 +2,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
