--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
