--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/Manage/ExternalLogins"
 
+@using BTW.Datastore.EFCore.Core
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
