--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/SetPassword.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/SetPassword.razor
@@ -1,8 +1,9 @@
 ﻿@page "/Account/Manage/SetPassword"
 
 @using System.ComponentModel.DataAnnotations
+@using BTW.Datastore.EFCore.Core
 @using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
+
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
