--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Identity
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
