--- a/BTW.Web/BTW.Web/Components/Account/Pages/RegisterConfirmation.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/RegisterConfirmation.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
