--- a/BTW.Web/BTW.Web/Components/Account/Pages/ResetPassword.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BTW.Web.Data
+@using BTW.Datastore.EFCore.Core
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
